# br-index

./: CMakeLists.txt  README.md  mytest.cpp
src/: br_index.hpp  br_index_fast.hpp  br_index_naive.hpp  br_index_nplcp.hpp  bri-build.cpp  bri-count.cpp  bri-locate.cpp  bri-locate2.cpp  bri-seed.cpp  bri-space.cpp  brif-build.cpp  brif-locate.cpp  brif-seed.cpp  definitions.hpp  huffman_string.hpp  permuted_lcp.hpp  rle_string.hpp  sparse_sd_vector.hpp  utils.hpp
test/: CMakeLists.txt  README.md  br_index_test.cpp  my_test.cpp  permuted_lcp_test.cpp  sparse_sd_vector_test.cpp
tool/: README.md  generate_patterns.py
